force-app/main/default/objects/Contact/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <label>ContactID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>