force-app/main/default/objects/Contact/fields/IsTest__c.field-meta.xml
<CustomField>
    <fullName>IsTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTest</label>
    <type>Checkbox</type>
</CustomField>