force-app/main/default/objects/Contact/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Account.ShippingPostalCode &lt;&gt; MailingPostalCode,NOT(ISBLANK( AccountId )))</errorConditionFormula>
    <errorDisplayField>MailingPostalCode</errorDisplayField>
    <errorMessage>Contact Mailing Postal code is different from account shipping postal code</errorMessage>
</ValidationRule>